# data_science_notebooks

./: README.md  pystan_getting_started.ipynb
causal_inference_the_mixtape_reading/: dag_examples.ipynb  pyproject.toml
kddcup-2009/: .gitignore  README.md  decision_tree.ipynb  dnn.ipynb  download_data.sh  naive_bayes.ipynb  preprocess_data.ipynb  pyproject.toml  svm.ipynb
kddcup-2009/dnn/: dnn.ipynb  model.h5
kddcup-2009/dnn/.ipynb_checkpoints/: dnn-checkpoint.ipynb
netflix_prize/: Untitled.ipynb  movie_titles.ipynb  pyproject.toml
netflix_prize/.ipynb_checkpoints/: movie_titles-checkpoint.ipynb
nutrition_analysis/: README.md
nutrition_analysis/.ipynb_checkpoints/: nutrition-checkpoint.ipynb
power_analysis/: power_analysis.ipynb  pyproject.toml
pymc/: Untitled.ipynb  linear_model.ipynb  pyproject.toml
pymc/.ipynb_checkpoints/: linear_model-checkpoint.ipynb
timeseries_forecasting/: .gitignore  README.md
timeseries_forecasting/arima/: Dockerfile  README.md  arima.ipynb  requirements.txt
timeseries_forecasting/autoencoder_lstm/: lstm_autoencoder.ipynb
timeseries_forecasting/logistic_growth/: logistic_growth.ipynb
timeseries_forecasting/misc/: lstm_demo_several_timeseries.ipynb
timeseries_forecasting/quantile_regression_lstm/: quantile_regression_lstm.ipynb
ttest_vs_bootstrap/: README.md  Untitled.ipynb  confidence_intervals.ipynb  pyproject.toml
wahlomat2021/: exploration.ipynb  prepare_dataframe.ipynb  pyproject.toml
wahlomat2021/processed_data/: opinions.pickle  opinions_wide.pickle
