[tool.poetry]
name = "kdd_cup_2009"
version = "1.0"
description = "Small environment for most basic data science libs and some extras"
authors = [
    "Wolfgang Spindeler <wolfgang.spindeler@gmail.com>"
]
license = ""

# Requirements
[tool.poetry.dependencies]
python = ">=3.7.1"
jupyter = "^1.0.0"
pandas = "^1.2.1"
scikit-learn = "^0.24.1"
matplotlib = "^3.3.4"
tqdm = "^4.56.0"
requests = "^2.25.1"
xgboost = "^1.3.3"
tensorflow = "^2.4.1"
