[tool.poetry]
name = "power_analysis"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
jupyterlab = "^3.2.8"
statsmodels = "^0.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
