[tool.poetry]
name = "pymc"
version = "0.1.0"
description = ""
authors = ["Wolfgang Spindeler <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.3.4"
tqdm = "^4.59.0"
pymc3 = "^3.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
