[tool.poetry]
name = "ttest_vs_bootstrap"
version = "0.1.0"
description = ""
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
statsmodels = "^0.13.2"
jupyterlab = "^3.4.7"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
