[tool.poetry]
name = "wahlomat2021"
version = "0.1.0"
description = "Exploring Data From 2021 Wahl-O-Mat"
authors = ["Wolfgang <wolfgang.spindeler@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
